--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
     <title>2</title>
 </head>
@@ -22,3 +22,4 @@ echo "Connection failed: " . $e->getMessage();
 ?>
 </body>
 </html>
+saodksdoakdo
